added wls note to appendix

--- a/content/post/2020-12-08-weighting-classification-outcomes.Rmd
+++ b/content/post/2020-12-08-weighting-classification-outcomes.Rmd
@@ -47,7 +47,7 @@ The frequency of classification outcomes (TP, TN, FP, FN) at a specific decision
 
 Each cell of a confusion matrix may represent a more or less valuable outcome depending on the particular problem. In the case of giving out loans, a *false positive* may be more costly than a *false negative*^[(A default on a loan may cost more than profits lost from interest payments).] while in problems concerning security threats the reverse may be true^[A terrorist attack is more costly than the an unnecessary deployment of resources.]. When you have a sense of the value associated with the classification outcomes, you can use this information to weight the confusion matrices, calculate the expected value of each, identify which maximizes expected value and select the associated decision threshold for use when deploying your model. 
 
-*Note that weighting applied in the evaluation stage (as discussed throughout this post) often relies on the predicted probabilities of your model being accurate (and not just ordered correctly)^[I've [written previously](https://www.bryanshalloway.com/2020/11/23/remember-resampling-techniques-change-the-base-rates-of-your-predictions/) on this topic (though somewhat tangentially).]. *
+*Note that weighting applied in the evaluation stage (as discussed throughout this post) often relies on the predicted probabilities of your model being accurate (and not just ranked correctly)^[I've [written previously](https://www.bryanshalloway.com/2020/11/23/remember-resampling-techniques-change-the-base-rates-of-your-predictions/) on this topic (though somewhat tangentially).]. *
 
 # Lending Data Example
 
@@ -327,9 +327,9 @@ Other sections are primarily bookmarks on thought-processes related to earlier v
 
 ## Weights of Observations During and Prior to Modeling
 
-The body of the blog post is focused exclusively on the weighting during model evaluation *after model training*. This section provides a brief overview of other types of weighting that can be used in modeling (as well as references for these topics).
+The body of the blog post is focused exclusively on weighting in model evaluation *after model training*. This section provides a brief overview of other types of weighting that can be used in modeling (as well as references for these topics).
 
-Robert Moser has a helpful blog post, [Fraud detection with cost sensitive machine learning](https://towardsdatascience.com/fraud-detection-with-cost-sensitive-machine-learning-24b8760d35d9), where he differentiates cost dependent classification (weighting after model building) from cost sensitive training (the practice of baking in the costs of classification outcomes^[It is important to note that when using these procedures, your model no longer returns predicted probabilities but measures of whether or not you *should* predict a particular outcome given your weights and costs.] into the objective function used during model training^[He includes a simple example of doing this with keras in python.]). 
+Robert Moser has a helpful blog post, [Fraud detection with cost sensitive machine learning](https://towardsdatascience.com/fraud-detection-with-cost-sensitive-machine-learning-24b8760d35d9), where he differentiates cost dependent classification (weighting after model building) from cost sensitive training (the practice of baking in the costs of classification outcomes^[It is important to note that when using these procedures, your model no longer returns predicted probabilities but measures of whether or not you *should* predict a particular outcome given your weights and costs.] into the objective function used during model training^[He includes a simple example of doing this with keras in python.]). Some modeling algorithms may inherently weight observations differently. For example, in the regression context, Weighted Least Squares will adjust observations weights to reduce the impact of highly influential observations.
 
 In other cases, weights are applied not in the model building step but immediately prior when setting the likelihood of an observation to be selected for training the model. For example, undersampling, oversampling or other sampling techniques are typically used in attempts to improve the performance of a model in predicting a minority class^[Or set of observations that are difficult to classify for other reason] but can also be used as a means of changing the base rate associated with each class^[The implications of this are sometimes not recognized by beginners as I write about in [Undersampling Will Change the Base Rates of Your Model's Predictions](https://www.bryanshalloway.com/2020/11/23/remember-resampling-techniques-change-the-base-rates-of-your-predictions/).]. Some algorithms use biased resampling techniques directly in their model building procedures^[For example gradient boosting techniques bias successive resamples such that observations where the model performs poorly are more likely to be selected in subsequent rounds of model training.]. Similar in effect to over and under sampling the data, models may also handle weights according to the outcome class of the observation^[This is described in [Rebalancing, i. Weighting](https://mlr.mlr-org.com/articles/tutorial/cost_sensitive_classif.html#i--weighting) in the [mlr](https://mlr.mlr-org.com/) vignette.]. 
 
