--- a/content/post/2019-12-30-iceland-day-4-southeast-coast-diamond-beach.Rmd
+++ b/content/post/2019-12-30-iceland-day-4-southeast-coast-diamond-beach.Rmd
@@ -66,4 +66,4 @@ I laid there for a while. High tide started to come in and the approaching sound
 
 The return trip was more direct, we made just two quick stops. One in the town of Hof to see a church that looked as though it grew from the earth and belonged in The Shire. Another was an unsuccessful search for a geologic site we’d skipped over in our rush to get to Diamond Beach before sundown^[When we stopped to search, we did see a cloistered group of people in minivans that seemed surprised at us stopping near them. At first we thought maybe they were star gazing but it seemed they were meeting for some other purpose we could not divine. We continued on our way.].  
 
-The sky was clear now. We drove for long stretches with the windows rolled down peering at the unfiltered stars. Three hours into the drive Britney noticed a faint greenish-gray fluttering in the sky. We gasped and shouted excited confirmations to each other of what we were seeing. It was wispier than clouds but moved like liquid in the sky. In just a few seconds it dissolved into the blackness of the night. That ghostly image was the only glimpse of an aurora we caught on the trip. We should have pulled over at that spot as the sky soon filled with clouds and our hunting was over.
+The sky was clear now. We drove for long stretches with the windows rolled down peering at the unfiltered stars. Three hours into the drive Britney noticed a faint greenish-gray fluttering. We gasped and shouted excited confirmations to each other of what we were seeing. It was wispier than clouds but moved like liquid in the sky. In just a few seconds it dissolved into the blackness of the night. That ghostly image was the only glimpse of an aurora we caught on the trip. We should have pulled over at that spot as the sky soon filled with clouds and our hunting was over.
