--- a/content/post/2019-12-29-iceland-day-3-thingvellier-disaster.Rmd
+++ b/content/post/2019-12-29-iceland-day-3-thingvellier-disaster.Rmd
@@ -54,6 +54,6 @@ We resumed our drive and Britney remarked that her dad had almost gotten her a d
 
 I pulled into the gas station of a tiny town and got out to look at the fuel pumps. A sinking feeling ran over me as I noticed that petrol was *green* and diesel was black (reverse of the colors in the USA). We called the gas station and had them look up the order associated with my credit card, which confirmed my mistake.  
 
-I spent the next hour reading worst-case scenarios on the damage I might have caused the engine^[And feeling more idiotic than I’ve ever felt in my life.]. We looked-up numbers for the rental car company and emergency car repair, most of which didn’t answer and none of which could help us. A taxi pulled-in behind us to fill-up. I approached him and explained our situation. He called someone on our behalf. A ‘Mr. Kristy’ answered who indicated he could come by in the morning. The cabby gave me the number and I told ‘Mr. Kristy’ I would give him a call if we weren’t able to fix it before then.  
+I spent the next hour reading worst-case scenarios on the damage I might have caused the engine^[And feeling more idiotic than I’ve ever felt in my life.]. We looked-up numbers for the rental car company and emergency car repair, most of which didn’t answer and none of which could help us. A taxi pulled-in behind us. A large pale man in a black fluffy jacket and matching hat stepped out and began filling up his car. I approached him and explained our situation. He called someone on our behalf. A ‘Mr. Kristy’ answered who indicated he could come by in the morning. The cabby gave me the number and I told ‘Mr. Kristy’ I would give him a call if we weren’t able to fix it before then.  
 
 After struggling through options for another hour we decided to call it quits, get some sleep, and start afresh in the morning. Through all of this Britney was as magnanimous as any person you have ever met.
