draft on data on people experiencing homelessness

--- a/content/post/2019-12-30-iceland-day-4-southeast-coast-diamond-beach.Rmd
+++ b/content/post/2019-12-30-iceland-day-4-southeast-coast-diamond-beach.Rmd
@@ -40,7 +40,7 @@ The first black sand beach we stopped at was Reynisfjara. Reynisfjara has a pede
 
 ![](https://i.imgur.com/hXXBdMu.jpg)
 
-At the edge of the ocean are the remains of ancient basalt rock columns. Icelandic legend has it they were formed by trolls dragging a ship towards land who were stopped in their tracks and turned to stone by the dawning sun.
+At the edge of the ocean are the remains of ancient basalt rock columns. Icelandic legend has it they were formed by trolls stopped in their tracks and turned to stone by the dawning sun.
 
 ![](https://i.imgur.com/2JQKvoK.jpg)
 
