--- a/content/post/2020-09-11-compromise-between-the-electoral-college-and-a-national-popular-vote.Rmd
+++ b/content/post/2020-09-11-compromise-between-the-electoral-college-and-a-national-popular-vote.Rmd
@@ -15,28 +15,28 @@ output:
     toc: no
 ---
 
-*In this post I discuss using a national popular vote weighted by the electoral college to elect the president. This approach would empower voters by expanding political influence outside of ‘battleground states.’ It would also preserve the existing biases built into the American electoral college (thereby making such a system legislatively palatable across party affiliations and electoral college traditionalists)*^[This post presents potential merits of a weighted national popular vote however it does not represent a personal endorsement.].
+**TLDR:** *In this post I discuss using a national popular vote weighted by the electoral college to elect the president. This approach would empower voters by expanding political influence outside of ‘battleground states.’ It would also preserve the existing biases built into the American electoral college (thereby making such a system legislatively palatable across party affiliations and electoral college traditionalists)^[This post presents potential merits of a weighted national popular vote however it does not represent a personal endorsement.].*
 
-Irrespective of political party or disposition towards direct democracy, the winner-take-all approach (currently applied by most US states to allocate their electoral votes for the president) has clear drawbacks. These include:
+Irrespective of political party or disposition towards direct democracy, the winner-take-all approach applied by most US states to allocate their electoral votes for presidential elections has clear drawbacks. These include:
 
 * incentivizes only campaigning in battleground states
 * less reliable outcomes compared to alternatives^[A few thousand votes have a greater chance of swaying entire elections in our current system compared to the likelihood of this occurring with, for example, a national popular vote ([Heilman, 2020](https://theconversation.com/the-electoral-college-is-surprisingly-vulnerable-to-popular-vote-changes-141104)).]
 * incentivizes policies that benefit battleground states over the interests of ‘all Americans’
 * promotes a feeling among much of the electorate that their vote is unlikely to influence the election
 
-In the last several years^[particularly since the 2016 election], the movement for a national popular vote (to elect the president) has gained traction. A compact between states to vote for the national popular vote winner has been passed in states representing 196 of the 270 electoral votes required for the agreement to have legal force. The [website](https://www.nationalpopularvote.com/) of the organization promoting the National Popular Vote initiative outlines the disadvantages of the winner-take-all approach used by most states and provides arguments for employing a national popular vote. The site also provides evidence for the constitutionality of a national popular vote and counters ‘myths’ that a popular vote would overly advantage or disadvantage certain states.
+In the last several years^[particularly since the 2016 election], the movement for a national popular vote to elect the president has gained traction. A compact between states to vote for the national popular vote winner has been passed in states representing 196 of the 270 electoral votes required for the agreement to have legal force^[The [website](https://www.nationalpopularvote.com/) of the organization promoting the National Popular Vote initiative outlines the disadvantages of the winner-take-all approach used by most states and provides arguments for employing a national popular vote. The site also provides evidence for the constitutionality of a national popular vote and counters ‘myths’ that a popular vote would overly advantage or disadvantage certain states.]. 
 
 However partisanship makes transitioning to a national popular vote difficult. For any given presidential election cycle, the electoral college may favor a particular political party^[However the political party the electoral college advantages frequently changes between election cycles ([Silver, 2016](https://fivethirtyeight.com/features/will-the-electoral-college-doom-the-democrats-again/)).]. Hence it may be against the advantaged party’s interests to support a change to the election process (likewise, the disadvantaged party has an incentive to *support* a change in the election process^[It’s not a coincidence that the popular vote initiative is gained substantial support from many Democrats following the 2016 election.]). Therefore a cynic could argue that getting the requisite number of states to legislate support for the national popular vote compact is almost synonymous with winning the election. Even a national popular vote that *was* passed into law may be politically fragile, and at risk of frequent challenges depending on the state-level political party in power.
 
-The goal of the National Popular Vote initiative is to *make every vote matter equally*. However if we weaken this goal to be: *make the importance of votes more equal than they currently are,* ^[by spreading political influence away from the dozen or so battleground states] it may be easier to change the electoral system in a way that is less likely to agitate partisans or traditionalists attached to the influences inherent in the electoral college.
+The goal of the National Popular Vote initiative is to *make every vote matter equally*. However if we weaken this goal to be: *make the importance of votes more equal than they currently are^[by spreading political influence away from the dozen or so battleground states]*, it may be easier to change the electoral system in a way that is less likely to agitate partisans or traditionalists attached to the unequal allotment of influence inherent in the electoral college.
 
 I propose that a popular vote *weighted by the electoral college* deserves consideration. Such an approach is equivalent to having the allocation of electoral votes in each state be based on the popular vote within that state. For example, if a state has 30 electoral votes, and 55% of those go to the Republican and 45% to the Democrat, the Republican would receive 16.5 votes and the Democrat 13.5. Let's apply this across states for the 2012 election.
 
 ![[brshallo/weighted-national-popular-vote](https://github.com/brshallo/weighted-national-popular-vote)](https://github.com/brshallo/weighted-national-popular-vote/blob/master/state-electoral-votes-split.png?raw=true)
 
-Aggregating these for the 2012 election, the Democrat (Obama) would have received 271.4 electoral votes, the Republican (Romney) 255 electoral votes, and other candidates 11.6 electoral votes. This represents 50.4%, 47.4%, and 2.2% respectively. Describing outcomes in terms of 'proportional allocation of electoral votes by state' or as a 'electoral college weighted percentage of the popular vote' are interchangeable^[As long as you allow for fractional electoral votes.]. However percentages are easier to articulate, hence this is the terminology I use for the remainder of the post.
+Aggregating these for the 2012 election, the Democrat (Obama) would have received 271.4 electoral votes, the Republican (Romney) 255 electoral votes, and other candidates 11.6 electoral votes. This represents 50.4%, 47.4%, and 2.2% respectively. Describing outcomes in terms of 'proportional allocation of electoral votes by state' or as a 'popular vote weighted by the electoral college' are interchangeable^[As long as you allow for fractional electoral votes.]. However percentages are easier to articulate, hence I will use the latters terminology for the remainder of the post.
 
-A national popular vote weighted by the electoral college would truly empower small states^[The electoral college is designed to empower small states, though in practice it only empowers battleground states (at least for presidential elections).] whose voters' ballots could be worth as much as three times those of larger states[^1]. 
+A national popular vote weighted by the electoral college would truly empower small states^[A common refrain for keeping the current system is that it gives small states more representation. However in practice it only empowers battleground states (at least for presidential elections).] whose voters' ballots could be worth as much as three times those of larger states[^1]. 
 
 [^1]: For an alternative approach to weighting influence, see [Durran, 2017](https://theconversation.com/whose-votes-count-the-least-in-the-electoral-college-74280) which reviews states have the highest or lowest weighted votes based on actual voters (rather than the census). In the article they point-out that many of the votes in mid-sized states actually have the lowest weights. They attribute this to higher voter turnout and note (at the end of the article) that this may be contributed to by many of these being in battleground states.
   
@@ -79,7 +79,7 @@ The beginning of the video “Myths About Constitutionality” explains how we g
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ubIeQ-uO_b0?start=92" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-Essentially it was a [collective action problem](https://en.wikipedia.org/wiki/Collective_action_problem#:~:text=A%20collective%20action%20problem%20or,individuals%20that%20discourage%20joint%20action.) whereby states (controlled by one party or another) adopted a ‘winner-take-all’ approach as a means of attempting to maximize their individual influence (and give the most advantage they could to their preferred candidate). Once a few states adopted the ‘winner-take-all’ system it created a domino effect whereby all states adopted it^[The result of every state adopting it however has, at least in modern elections, resulted in the majority of states' influence being reduced.]. 
+Essentially it was a [collective action problem](https://en.wikipedia.org/wiki/Collective_action_problem#:~:text=A%20collective%20action%20problem%20or,individuals%20that%20discourage%20joint%20action.) whereby states (controlled by one party or another) adopted a ‘winner-take-all’ approach as a means of attempting to maximize their individual influence and give the most advantage they could to their preferred candidate. Once a few states adopted the ‘winner-take-all’ system it created a domino effect whereby all states adopted it^[The result of every state adopting it however has, at least in modern elections, resulted in the majority of states' influence being reduced.]. 
 
 *Ways of getting around this collective action problem:*
 
@@ -92,7 +92,7 @@ Essentially it was a [collective action problem](https://en.wikipedia.org/wiki/C
 
 # Closing note
 
-The chief advantage of a national popular vote for presidential elections is not that it achieves *perfect* representation but that it provides *improved incentives* for presidential candidates. For example it would incentivize campaigns to give attention to a broader subset of the American public and increase the reliability of election results. However a national popular vote inevitably faces partisan challenges and may give-off the appearance of being too momentous a departure from the norms of the existing electoral college. As a compromise between these systems, a national popular vote that is weighted by the electoral college avoids many of the challenges to legislating a pure national popular vote while still achieving its most important objectives.
+In comparison to our current system, the biggest advantage of a national popular vote for presidential elections is not that it achieves *perfect* representation but that it provides *improved incentives* for presidential candidates. For example it would incentivize campaigns to give attention to a broader subset of the American public and increase the reliability of election results. However a national popular vote inevitably faces partisan challenges and may give-off the appearance of being too momentous a departure from the norms of the existing electoral college. As a compromise between these systems, a national popular vote that is weighted by the electoral college avoids many of the challenges to legislating a pure national popular vote while still achieving its most important objectives.
 
 # Appendix
 
@@ -110,4 +110,4 @@ There may be some philosophical appeal to this method for allocating votes howev
 
 ## Related Writing
 
-After writing this post I found a similar post by Economist writer [G. Elliott Morris](https://twitter.com/gelliottmorris), [What If Each State Allocated Their Electoral College Votes Proportionally?](https://www.thecrosstab.com/2019/03/08/electoral-college-proportional/). We do a few things differently though (which I describe at the bottom of the post in a diqus [comment](http://disq.us/p/2bvit1z)).
+After writing this post I found a similar post by Economist writer [G. Elliott Morris](https://twitter.com/gelliottmorris), [What If Each State Allocated Their Electoral College Votes Proportionally?](https://www.thecrosstab.com/2019/03/08/electoral-college-proportional/). We do a few things differently though -- which I describe at the bottom of his post in a diqus [comment](http://disq.us/p/2bvit1z)) -- namely his example uses whole rather than fractional allocation of electoral votes.
